# osu-auto-gamma

./: Cargo.toml
src/: app.rs  config.rs  main.rs  tosu.rs
