[package]
name = "osu-auto-gamma"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
websockets = "0.3.0"
