[package]
name = "osu-auto-gamma"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ctrlc = "3.5.1"
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.9.8"
websockets = "0.3.0"
